# gRPC-client-deps

./: .gitlab-ci.yml  Dockerfile  README.md
.github/workflows/: build_libs.yaml  test_code_build_image_workflow_reuse.yaml
ci/gitlab_templates/: RULES.yml
plcnext_deps/: dep_copy.sh
plcnext_deps/axcf3_deps/cmake_modules/ros/absl/: abslConfig.cmake  abslTargets-noconfig.cmake  abslTargets.cmake
plcnext_deps/axcf3_deps/cmake_modules/ros/c-ares/: c-ares-config.cmake  c-ares-targets-noconfig.cmake  c-ares-targets.cmake
plcnext_deps/axcf3_deps/cmake_modules/ros/grpc/: gRPCConfig.cmake  gRPCConfigVersion.cmake  gRPCTargets-noconfig.cmake  gRPCTargets.cmake
plcnext_deps/axcf3_deps/cmake_modules/ros/grpc/modules/: Findc-ares.cmake
plcnext_deps/axcf3_deps/cmake_modules/ros/re2/: re2Config.cmake
plcnext_deps/axcf3_deps/cmake_modules/usr/Modules/: FindProtobuf.cmake
plcnext_deps/axcf3_deps/lib/: libaddress_sorting.so.15.0.0  libcares.so.2.4.0  libgpr.so.15.0.0  libgrpc++_error_details.so.1  libgrpc++_reflection.so.1.36.4  libgrpc++_unsecure.so.1  libgrpc.so.15  libgrpc_unsecure.so.15.0.0  libprotobuf-lite.so.25.0.0  libprotobuf.so.25  libprotoc.so.25.0.0  libupb.so.15
test_code/foxy/grpc_plcnext/: CMakeLists.txt  package.xml
test_code/foxy/grpc_plcnext/include/grpc_plcnext/: dataaccess_client.hpp  subscription_client.hpp
test_code/foxy/grpc_plcnext/src/: dataaccess_client.cpp  grpc_client.cpp  pub.cpp  subscription_client.cpp
test_code/noetic/grpc_plcnext/: CMakeLists.txt  package.xml
test_code/noetic/grpc_plcnext/include/grpc_plcnext/: dataaccess_client.hpp  grpc_client.hpp  subscription_client.hpp
test_code/noetic/grpc_plcnext/src/: dataaccess_client.cpp  grpc_client.cpp  pub.cpp  sub.cpp  subscription_client.cpp
